Improve code quality with SonarQube